Make website secure from file path traversing, resolves #4